--- a/Test1.html
+++ b/Test1.html
@@ -5,6 +5,14 @@
         <title>Titre</title>
     </head>
     <body>
+            <p>Hello Formalab</p>
+            <hr/>
+            <h1>titre très important</h1>
+            <h2>Titre important</h2>
+            <h3>Titre un peu moins important</h3>
+            <h4>Titre pas trop important</h4>
+            <h5>Titre pas important</h5>
+            <h6>Titre pas vraiment important</h6>
         
     </body>
 </html>
