--- a/Test1.html
+++ b/Test1.html
@@ -13,6 +13,12 @@
             <h4>Titre pas trop important</h4>
             <h5>Titre pas important</h5>
             <h6>Titre pas vraiment important</h6>
+
+            <ol>
+                    <li>Je me lève.</li>
+                    <li>Je mange et je bois.</li>
+                    <li>Je retourne me coucher.</li>
+            </ol>
         
     </body>
 </html>
