Adding an unordered list

--- a/Test1.html
+++ b/Test1.html
@@ -19,6 +19,12 @@
                     <li>Je mange et je bois.</li>
                     <li>Je retourne me coucher.</li>
             </ol>
+
+            <ul>
+                    <li>Fraises</li>
+                    <li>Framboises</li>
+                    <li>Cerises</li>
+            </ul>
         
     </body>
 </html>
