--- a/Test1.html
+++ b/Test1.html
@@ -27,6 +27,7 @@
             </ul>
 
             <a href="https://formalab.tn"target="_blank">Formalab</a>
+            <img src="formalab.jpg"alt="Photo of Formalab"/><br>
         
     </body>
 </html>
