--- a/Test1.html
+++ b/Test1.html
@@ -28,6 +28,7 @@
 
             <a href="https://formalab.tn"target="_blank">Formalab</a>
             <img src="formalab.jpg"alt="Photo of Formalab"/><br>
+            <video src="RainyDay.mp4"controls width="600"></video>
         
     </body>
 </html>
