--- a/html/Test2.html
+++ b/html/Test2.html
@@ -16,6 +16,15 @@
                 <tr><td>Formalab</td></tr>
             </tbody>                    
         </table>
+
+        <form name="Inscription" method="GET" action="">
+
+            <!--inputs here-->
+            <input type="text" name="Userame" placeholder="John" required>
+            <input type="password" name="Password"/>
+            <input type="submit" vamue="Envoyer"/>
+            <input type="reset" value="Effacer"/>
+        </form>
             
     </body>  
 </html>
