--- a/html/Test2.html
+++ b/html/Test2.html
@@ -25,6 +25,12 @@
             <input type="submit" vamue="Envoyer"/>
             <input type="reset" value="Effacer"/>
         </form>
+
+        <input type="checkbox" value="php" checked>PHP<br>
+        <input type="checkbox" value="java">JAVA<br>
+        <input type="checkbox" value="html">HTML<br>
+        <input type="checkbox" value="css">CSS<br>
+        <input type="checkbox" value="bootstrap">BOOTSTRAP<br>
             
     </body>  
 </html>
