--- a/html/Test2.html
+++ b/html/Test2.html
@@ -31,6 +31,9 @@
         <input type="checkbox" value="html">HTML<br>
         <input type="checkbox" value="css">CSS<br>
         <input type="checkbox" value="bootstrap">BOOTSTRAP<br>
+
+        <input type="radio"  name="gender" value="male">male
+        <input type="radio"  name="gender" value="female">female<br>
             
     </body>  
 </html>
