Adding a text area

--- a/html/Test2.html
+++ b/html/Test2.html
@@ -42,6 +42,10 @@
             <option value="java">Java</option>
             <option value="web">Web</option>
         </select><br>
+
+        <textarea rows="5" cols="40" placeholder="Type Here !">
+                <!--optional-->
+        </textarea><br>
             
     </body>  
 </html>
