Adding two buttons

--- a/html/Test2.html
+++ b/html/Test2.html
@@ -47,5 +47,8 @@
                 <!--optional-->
         </textarea><br>
             
+        <input type="button" value="Click Here!" onclick="JSfunction()"/>   
+        <button>Click Me</button> 
+        
     </body>  
 </html>
