--- a/html/Test3.html
+++ b/html/Test3.html
@@ -10,5 +10,8 @@
             Bonjour!
         </p>
 
+        <p id="parared">Mon premier paragraphe</p>
+        <p class="parableu">Mon second paragraphe</p>
+
     </body>
 </html>
