Adding some classes with and without id

--- a/html/Test3.html
+++ b/html/Test3.html
@@ -13,5 +13,11 @@
         <p id="parared">Mon premier paragraphe</p>
         <p class="parableu">Mon second paragraphe</p>
 
+        <h1 class="bleu">Titre</h1>
+        <p class="bleu">mon premier paragraphe </p>
+        <hr/>
+        <h1 class="vert">Titre 1</h1>
+        <p class="vert">Mon second paragrapher</p>
+
     </body>
 </html>
