Adding a border and a green color to objects of class .bord

--- a/html/Test3.html
+++ b/html/Test3.html
@@ -19,5 +19,7 @@
         <h1 class="vert">Titre 1</h1>
         <p class="vert">Mon second paragrapher</p>
 
+        <p class="bord vt">Bonjour</p>
+
     </body>
 </html>
