--- a/html/Test3.html
+++ b/html/Test3.html
@@ -20,6 +20,7 @@
         <p class="vert">Mon second paragrapher</p>
 
         <p class="bord vt">Bonjour</p>
+        <a href="https://code.tn">code</a>
 
     </body>
 </html>
