Trying new designs

--- a/html/Test3.html
+++ b/html/Test3.html
@@ -9,7 +9,8 @@
         <p name="stylesheet">
             Bonjour!
         </p>
-
+        <img src="../images/suicide.jpg"/><br>
+<!--
         <p id="parared">Mon premier paragraphe</p>
         <p class="parableu">Mon second paragraphe</p>
 
@@ -19,8 +20,9 @@
         <h1 class="vert">Titre 1</h1>
         <p class="vert">Mon second paragrapher</p>
 
-        <p class="bord vt">Bonjour</p>
-        <a href="https://code.tn">code</a>
+        <p class="bord vt">Bonjour</p>-->
+        <a href=" https://g.co/kgs/zszLj8">Come To a Place Where People matter MOST!</a>
+        <h1 id="J">Combobox</h1>
 
     </body>
 </html>
