Adding a bootstrap file

--- a/html/Test3.html
+++ b/html/Test3.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>HTML3</title>
-        <link rel="stylesheet" href="../CSS/style.css">             
+        <link rel="stylesheet" href="../CSS/style.css">       
+        <link rel="stylesheet" href="../CSS/bootstrap.min.css">         
     </head>
     <body>
         <p name="stylesheet">
             Bonjour!
         </p>
-        <img src="../images/suicide.jpg"/><br>
+        <img src="../images/suicide.jpg"/><br><br>
 <!--
         <p id="parared">Mon premier paragraphe</p>
         <p class="parableu">Mon second paragraphe</p>
