Adding a JavaScript test file

--- a/html/Test3.html
+++ b/html/Test3.html
@@ -25,5 +25,9 @@
         <a href=" https://g.co/kgs/zszLj8">Come To a Place Where People matter MOST!</a>
         <h1 id="J">Combobox</h1>
 
+        <button type="button" class="btn btn-danger">Avada Kedavra</button>
+
+        <script src="../JavaScript/controle.js"></script>
+
     </body>
 </html>
