Adding a new css file

--- a/html/exercice.html
+++ b/html/exercice.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>HTML3</title>
-        <link rel="stylesheet" href="../CSS/style.css">     
+        <link rel="stylesheet" href="../CSS/exercice.css">     
         <link rel="stylesheet" href="../CSS/bootstrap.min.css">         
     </head>
     <body>
-        <section id="Sect1">
-        </section>
-        <section id="Sect2">
-            <h1>Formalab</h1>
-        </section>
-        <section id="Sect3"></section>
+        <div id="Sect1">
+        </div>
+        <div id="Sect2">
+        <h1 >Formalab</h1>
+        </div>
+        <div id="Sect3"></div>
+
 
     </body>
 </html>
