Coding the js functions

--- a/html/Test4.html
+++ b/html/Test4.html
@@ -11,7 +11,7 @@
 
         <form name="form2">
             Ecrire votre nom: <input type="text" name="txtNom"/>
-            <input name="BtnClick2" type="button" value="Cliquez ici" onclick="message(document.form2.txtNom);"/>
+            <input name="BtnClick2" type="button" value="Cliquez ici" onclick="message2(document.form2.txtNom);"/>
         </form>
 
         <form name="form3">
