--- a/html/Test4.html
+++ b/html/Test4.html
@@ -16,10 +16,9 @@
 
         <form name="form3">
             Saisir un nombre: <input name="txtN" type="text" size="5"/>
-            <input name="BtnClick2" type="button" value="Cliquez ici" onclick="document.form3.textR.value=caree(document.form3.txtN);"/>
+            <input name="BtnClick2" type="button" value="Cliquez ici" onclick="document.form3.txtR.value=carre(document.form3.txtN);">
             <br/>
             Le carré de ce nombre est: <input name="txtR" type="text" size="10" readonly/>
-
         </form>
 
         <script src="../JavaScript/Test4.js"></script>
